Properly handle the Module SBDatabase when it's corrupted

BUG=595444

Review URL: https://codereview.chromium.org/1807253002

Cr-Commit-Position: refs/heads/master@{#381809}

Former-commit-id: 78dad59bea7ba92dfa77efd3d79fed9d6baad85b